crates/bevy_ecs/compile_fail/tests/ui/system_param_derive_readonly.stderr
error[E0277]: the trait bound `&'static mut Foo: ReadOnlyQueryData` is not satisfied
   --> tests/ui/system_param_derive_readonly.rs:16:11
    |
16  |     state.get(&world);
    |           ^^^ the trait `ReadOnlyQueryData` is not implemented for `&'static mut Foo`, which is required by `Mutable<'_, '_>: ReadOnlySystemParam`
    |
    = help: the following other types implement trait `ReadOnlyQueryData`:
              bevy_ecs::change_detection::Ref<'__w, T>
              Has<T>
              AnyOf<()>
              AnyOf<(F0,)>
              AnyOf<(F0, F1)>
              AnyOf<(F0, F1, F2)>
              AnyOf<(F0, F1, F2, F3)>
              AnyOf<(F0, F1, F2, F3, F4)>
            and 34 others
    = note: `ReadOnlyQueryData` is implemented for `&'static Foo`, but not for `&'static mut Foo`
    = note: required for `bevy_ecs::system::Query<'_, '_, &'static mut Foo>` to implement `ReadOnlySystemParam`
    = note: 1 redundant requirement hidden
    = note: required for `Mutable<'_, '_>` to implement `ReadOnlySystemParam`
note: required by a bound in `SystemState::<Param>::get`
   --> $BEVY_ROOT/crates/bevy_ecs/src/system/function_system.rs:215:16
    |
213 |     pub fn get<'w, 's>(&'s mut self, world: &'w World) -> SystemParamItem<'w, 's, Param>
    |            --- required by a bound in this associated function
214 |     where
215 |         Param: ReadOnlySystemParam,
    |                ^^^^^^^^^^^^^^^^^^^ required by this bound in `SystemState::<Param>::get`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
